<resources>
    <string name="app_name" translatable="false">Pocket World</string>
    <string name="persons">Persons</string>
    <string name="number_composition">Number Composition</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="strength_hint">Strength</string>
    <string name="save_btn">Save changes</string>
    <string name="kill_btn">Kill</string>
    <string name="label_birth_date">Birth date:</string>
    <string name="birth_date_example">01/12/22 13:15</string>
    <string name="label_sex">Sex:</string>
    <string name="sex_example">FEMALE</string>
    <string name="label_is_alive">Alive:</string>
    <string name="label_is_favorite">Favorite:</string>
    <string name="is_alive_example">true</string>
    <string name="is_favorite_example">false</string>
    <string name="label_death_date">Death date:</string>
    <string name="death_date_example">-</string>
    <string name="label_id" translatable="false">ID:</string>
    <string name="id_example">0</string>
    <string name="error_input_strength">Strength must be greater that 0</string>
    <string name="error_input_first_name">First name can\'t be empty</string>
    <string name="error_input_last_name">Last name can\'t be empty</string>
    <string name="person_saved_success">Сhanges applied</string>
    <!-- num composition { -->
    <string name="question_mark">\?</string>
    <string name="welcome_title">Number composition</string>
    <string name="game_rules">
        Rules of the game: you will have three figures in front of you, two from below and one from
        above, two of them will have numbers. It is necessary that the sum of the numbers from the
        two lower figures be equal to the number in the upper figure, to do this, you need to insert
        the missing number.\n\nExample: the number 7 is in the upper circle, in one from the lower
        question mark, and in the other the number 4. So in place of the question mark should be the
        number 3 because 3 + 4 = 7
    </string>
    <string name="button_lets_go">Start game</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="choose_level_title">Choose level:</string>
    <string name="easy_level">Easy</string>
    <string name="normal_level">Normal</string>
    <string name="hard_level">Hard</string>
    <string name="test_level">Test</string>
    <string name="game_over">Game Over</string>
    <string name="score_answers">Your scores: %s</string>
    <string name="score_percentage">Percentage of correct answers: %s</string>
    <string name="retry">Try again</string>
    <string name="right_answers">Correct answers %s from %s required</string>
    <string name="required_percentage">Required percent of correct answers: %s</string>
    <string name="required_score">Required count of correct answers: %s</string>
    <string name="progress_answers">Correct answers %s (minimum %s)</string>
    <!-- num composition } -->

    <string name="add_person_description">Add a new person</string>
    <string name="refreshing">refreshing…</string>
    <string name="refresh_pw_state">Refresh</string>
    <string name="failed_to_refresh_pw_state">Failed to refresh PW state.</string>
    <string name="news">News</string>
    <string name="continue_label">Continue</string>
    <string name="new_game">New Game</string>
    <string name="cancel">Cancel</string>
    <string name="select_speed">Select speed</string>
    <string name="failed_to_start_new_game">Failed to start a new game</string>
    <string name="destroy_current_world_question">
        Current world will be destroyed.\nAre you sure you want to start a new game?
    </string>
    <string name="failed_to_destroy_current_world">Failed to destroy current world</string>
</resources>