<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DashboardActivity">

        <Button
            android:id="@+id/buttonPersons"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/persons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonRefreshPwState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/refresh_pw_state"
            app:layout_constraintBottom_toBottomOf="@+id/buttonPersons"
            app:layout_constraintStart_toEndOf="@+id/buttonPersons"
            app:layout_constraintTop_toTopOf="@+id/buttonPersons" />

        <Button
            android:id="@+id/buttonNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/news"
            app:layout_constraintBottom_toBottomOf="@+id/buttonRefreshPwState"
            app:layout_constraintStart_toEndOf="@+id/buttonRefreshPwState"
            app:layout_constraintTop_toTopOf="@+id/buttonRefreshPwState" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
<!--   TODO         app:stateRefreshingProgressVisibility="@{viewModel.pwStateRefreshed}">-->

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:id="@+id/refreshing_pw_state_progress_bar"
                android:indeterminate="true"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:max="100"
                android:visibility="visible" />

            <TextView
                android:gravity="center"
                android:id="@+id/refreshing_pw_state_label"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/refreshing_pw_state_progress_bar"
                android:layout_width="wrap_content"
                android:text="@string/refreshing" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>