<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kozak.pw.presentation.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:mainDataVisibility="@{viewModel.pwStateRefreshed}">

            <Button
                android:id="@+id/buttonPersons"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/persons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonNumComposition"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/number_composition"
                app:layout_constraintStart_toEndOf="@+id/buttonPersons"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonCoroutines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/coroutines"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonPersons" />

            <Button
                android:id="@+id/buttonRefreshPwState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/refresh_pw_state"
                app:layout_constraintStart_toEndOf="@+id/buttonCoroutines"
                app:layout_constraintTop_toBottomOf="@+id/buttonNumComposition" />

            <Button
                android:id="@+id/buttonNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/news"
                app:layout_constraintStart_toEndOf="@+id/buttonRefreshPwState"
                app:layout_constraintTop_toBottomOf="@+id/buttonNumComposition" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:stateRefreshingProgressVisibility="@{viewModel.pwStateRefreshed}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/refreshing_pw_state_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:indeterminate="true"
                android:max="100"
                android:visibility="visible" />

            <TextView
                android:id="@+id/refreshing_pw_state_label"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/refreshing_pw_state_progress_bar"
                android:gravity="center"
                android:text="@string/refreshing" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>